--- a/classes/nonogramas2.properties
+++ b/classes/nonogramas2.properties
@@ -1,21 +1,21 @@
-nonograma.nombreProblema=Stairs
+nonogram.puzzleName=Stairs
 
-nonograma.pistasColumna1=0;2
-nonograma.pistasColumna2=0;3
-nonograma.pistasColumna3=2;1
-nonograma.pistasColumna4=2;1
-nonograma.pistasColumna5=0;5
+nonogram.columnClues1=0;2
+nonogram.columnClues2=0;3
+nonogram.columnClues3=2;1
+nonogram.columnClues4=2;1
+nonogram.columnClues5=0;5
 
-nonograma.pistasFila1=0;2
-nonograma.pistasFila2=0;3
-nonograma.pistasFila3=2;1	
-nonograma.pistasFila4=2;1	
-nonograma.pistasFila5=0;5
+nonogram.rowClues1=0;2
+nonogram.rowClues2=0;3
+nonogram.rowClues3=2;1	
+nonogram.rowClues4=2;1	
+nonogram.rowClues5=0;5
 
-nonograma.tableroFila1=00011
-nonograma.tableroFila2=00111
-nonograma.tableroFila3=01101
-nonograma.tableroFila4=11001
-nonograma.tableroFila5=11111
+nonogram.boardRow1=00011
+nonogram.boardRow2=00111
+nonogram.boardRow3=01101
+nonogram.boardRow4=11001
+nonogram.boardRow5=11111
 
 
