--- a/data/nonogramas1.properties
+++ b/data/nonogramas1.properties
@@ -1,21 +1,21 @@
-nonograma.nombreProblema=Happy Face
+nonogram.puzzleName=Happy Face
 
-nonograma.pistasColumna1=0;1
-nonograma.pistasColumna2=2;1
-nonograma.pistasColumna3=0;1
-nonograma.pistasColumna4=2;1
-nonograma.pistasColumna5=0;1
+nonogram.columnClues1=0;1
+nonogram.columnClues2=2;1
+nonogram.columnClues3=0;1
+nonogram.columnClues4=2;1
+nonogram.columnClues5=0;1
 
-nonograma.pistasFila1=1;1
-nonograma.pistasFila2=1;1
-nonograma.pistasFila3=0;0
-nonograma.pistasFila4=1;1
-nonograma.pistasFila5=0;3
+nonogram.rowClues1=1;1
+nonogram.rowClues2=1;1
+nonogram.rowClues3=0;0
+nonogram.rowClues4=1;1
+nonogram.rowClues5=0;3
 
-nonograma.tableroFila1=01010
-nonograma.tableroFila2=01010
-nonograma.tableroFila3=00000
-nonograma.tableroFila4=10001
-nonograma.tableroFila5=01110
+nonogram.boardRow1=01010
+nonogram.boardRow2=01010
+nonogram.boardRow3=00000
+nonogram.boardRow4=10001
+nonogram.boardRow5=01110
 
 
