--- a/data/nonogramas3.properties
+++ b/data/nonogramas3.properties
@@ -1,21 +1,21 @@
-nonograma.nombreProblema=Airplane
+nonogram.puzzleName=Airplane
 
-nonograma.pistasColumna1=0;1
-nonograma.pistasColumna2=2;1
-nonograma.pistasColumna3=0;5
-nonograma.pistasColumna4=2;1
-nonograma.pistasColumna5=0;1
+nonogram.columnClues1=0;1
+nonogram.columnClues2=2;1
+nonogram.columnClues3=0;5
+nonogram.columnClues4=2;1
+nonogram.columnClues5=0;1
 
-nonograma.pistasFila1=0;1
-nonograma.pistasFila2=0;3
-nonograma.pistasFila3=0;5	
-nonograma.pistasFila4=0;1	
-nonograma.pistasFila5=0;3
+nonogram.rowClues1=0;1
+nonogram.rowClues2=0;3
+nonogram.rowClues3=0;5	
+nonogram.rowClues4=0;1	
+nonogram.rowClues5=0;3
 
-nonograma.tableroFila1=00100
-nonograma.tableroFila2=01110
-nonograma.tableroFila3=11111
-nonograma.tableroFila4=00100
-nonograma.tableroFila5=01110
+nonogram.boardRow1=00100
+nonogram.boardRow2=01110
+nonogram.boardRow3=11111
+nonogram.boardRow4=00100
+nonogram.boardRow5=01110
 
 
