--- a/classes/nonogramas6.properties
+++ b/classes/nonogramas6.properties
@@ -1,21 +1,21 @@
-nonograma.nombreProblema=Dog
+nonogram.puzzleName=Dog
 
-nonograma.pistasColumna1=0;1
-nonograma.pistasColumna2=0;3
-nonograma.pistasColumna3=0;2
-nonograma.pistasColumna4=0;5
-nonograma.pistasColumna5=0;1
+nonogram.columnClues1=0;1
+nonogram.columnClues2=0;3
+nonogram.columnClues3=0;2
+nonogram.columnClues4=0;5
+nonogram.columnClues5=0;1
 
-nonograma.pistasFila1=0;1
-nonograma.pistasFila2=1;2
-nonograma.pistasFila3=0;3
-nonograma.pistasFila4=0;3
-nonograma.pistasFila5=1;1
+nonogram.rowClues1=0;1
+nonogram.rowClues2=1;2
+nonogram.rowClues3=0;3
+nonogram.rowClues4=0;3
+nonogram.rowClues5=1;1
 
-nonograma.tableroFila1=00010
-nonograma.tableroFila2=10011
-nonograma.tableroFila3=01110
-nonograma.tableroFila4=01110
-nonograma.tableroFila5=01010
+nonogram.boardRow1=00010
+nonogram.boardRow2=10011
+nonogram.boardRow3=01110
+nonogram.boardRow4=01110
+nonogram.boardRow5=01010
 
 
