--- a/classes/nonogramas7.properties
+++ b/classes/nonogramas7.properties
@@ -1,21 +1,21 @@
-nonograma.nombreProblema=Torii
+nonogram.puzzleName=Torii
 
-nonograma.pistasColumna1=1;1
-nonograma.pistasColumna2=0;5
-nonograma.pistasColumna3=1;1
-nonograma.pistasColumna4=0;5
-nonograma.pistasColumna5=1;1
+nonogram.columnClues1=1;1
+nonogram.columnClues2=0;5
+nonogram.columnClues3=1;1
+nonogram.columnClues4=0;5
+nonogram.columnClues5=1;1
 
-nonograma.pistasFila1=0;5
-nonograma.pistasFila2=1;1
-nonograma.pistasFila3=0;5
-nonograma.pistasFila4=1;1
-nonograma.pistasFila5=1;1
+nonogram.rowClues1=0;5
+nonogram.rowClues2=1;1
+nonogram.rowClues3=0;5
+nonogram.rowClues4=1;1
+nonogram.rowClues5=1;1
 
-nonograma.tableroFila1=11111
-nonograma.tableroFila2=01010
-nonograma.tableroFila3=11111
-nonograma.tableroFila4=01010
-nonograma.tableroFila5=01010
+nonogram.boardRow1=11111
+nonogram.boardRow2=01010
+nonogram.boardRow3=11111
+nonogram.boardRow4=01010
+nonogram.boardRow5=01010
 
 
