--- a/classes/nonogramas4.properties
+++ b/classes/nonogramas4.properties
@@ -1,21 +1,21 @@
-nonograma.nombreProblema=Elephant
+nonogram.puzzleName=Elephant
 
-nonograma.pistasColumna1=0;2
-nonograma.pistasColumna2=0;4
-nonograma.pistasColumna3=0;3
-nonograma.pistasColumna4=0;4
-nonograma.pistasColumna5=0;2
+nonogram.columnClues1=0;2
+nonogram.columnClues2=0;4
+nonogram.columnClues3=0;3
+nonogram.columnClues4=0;4
+nonogram.columnClues5=0;2
 
-nonograma.pistasFila1=1;1
-nonograma.pistasFila2=2;2
-nonograma.pistasFila3=0;5
-nonograma.pistasFila4=0;3
-nonograma.pistasFila5=0;1
+nonogram.rowClues1=1;1
+nonogram.rowClues2=2;2
+nonogram.rowClues3=0;5
+nonogram.rowClues4=0;3
+nonogram.rowClues5=0;1
 
-nonograma.tableroFila1=01010
-nonograma.tableroFila2=11011
-nonograma.tableroFila3=11111
-nonograma.tableroFila4=01110
-nonograma.tableroFila5=00100
+nonogram.boardRow1=01010
+nonogram.boardRow2=11011
+nonogram.boardRow3=11111
+nonogram.boardRow4=01110
+nonogram.boardRow5=00100
 
 
