--- a/classes/nonogramas5.properties
+++ b/classes/nonogramas5.properties
@@ -1,21 +1,21 @@
-nonograma.nombreProblema=Flower
+nonogram.puzzleName=Flower
 
-nonograma.pistasColumna1=0;3
-nonograma.pistasColumna2=0;5
-nonograma.pistasColumna3=2;2
-nonograma.pistasColumna4=0;5
-nonograma.pistasColumna5=0;3
+nonogram.columnClues1=0;3
+nonogram.columnClues2=0;5
+nonogram.columnClues3=2;2
+nonogram.columnClues4=0;5
+nonogram.columnClues5=0;3
 
-nonograma.pistasFila1=0;3
-nonograma.pistasFila2=0;5
-nonograma.pistasFila3=2;2
-nonograma.pistasFila4=0;5
-nonograma.pistasFila5=0;3
+nonogram.rowClues1=0;3
+nonogram.rowClues2=0;5
+nonogram.rowClues3=2;2
+nonogram.rowClues4=0;5
+nonogram.rowClues5=0;3
 
-nonograma.tableroFila1=01110
-nonograma.tableroFila2=11111
-nonograma.tableroFila3=11011
-nonograma.tableroFila4=11111
-nonograma.tableroFila5=01110
+nonogram.boardRow1=01110
+nonogram.boardRow2=11111
+nonogram.boardRow3=11011
+nonogram.boardRow4=11111
+nonogram.boardRow5=01110
 
 
